2013-12-05 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Tagging HistFitter-00-00-36-01

2013-11-26 Geert-Jan Besjes <geert-jan.besjes@cern.ch>:
	* src/toy_utils.cxx, src/toy_utils.h: modify
	CollectAndWriteHypoTestResults to allow rejectFailed=false 

2013-11-24 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/YieldsTable.py: allow -B to run blinded, nObs(SR) will be
	replaced with -1. Also, run ROOT in batch mode.

2013-11-22 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: add --fitname option to allow user to specify
	name when running fits with -f. This is relevant for analyses where the
	exclusion yield table is needed: by default we plot fitConfigs[0] which is
	usually the background fit in cases where exclusion fits are constructed
	by copying the background and adding signal. 

2013-11-22 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/toy_utils.cxx: accidentally rejected all fits, now fixed to proper
	behaviour: just reject bad ones
	* HistFitter-00-00-36

2013-11-21 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* macros/Examples/pulls/examplePullPlot.py: fix broken path
	* HistFitter-00-00-35-01

2013-11-21 Max Baak <mbaak@cern.ch>
	M       src/toy_utils.h
	M       src/toy_utils.cxx
	* by default, when merging hypo tests, reject grid points with failed
	pre-fits.
	* Tagging HistFitter-00-00-34
	* Moved examples/ to macros/Examples/
	* Tagging HistFitter-00-00-35


2013-11-21 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* examples/: added an example pull plot script, with demo output

2013-11-21 Max Baak <mbaak@cern.ch>
	* src/ConfigMgr.cxx: ExclusionCleanup() now reports the number of
	rejected hypo tests in per scan.

2013-11-20 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/pullPlotUtils.py: utility module for pull plots

2013-11-20 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/YieldsTable.py: allow -C and -L options to set caption and label
 	  by hand for outputted table